--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
             <li>
                 <i class="fa-solid fa-address-card"></i>
-                <a href="#">Cards/a>
+                <a href="#">Cards</a>
             </li>
             <li>
                 <i class="fa-solid fa-medal"></i>
